@@ -1,5 +1,7 @@
 DIST idjc-0.8.8.tar.gz 2394140 SHA256 6f27271b2d918747c4caa0d19570173c9866e19c3db076b0974a161adf86ad6c SHA512 350ac339d1646ec5f2e1ea2e58f01cd7ec85e85928dfa1efeb6f7446e9fc4c563ab4c272efd3617bc08b765a3b13b762fe64b024106128cb1653377e73d458db WHIRLPOOL 350a8e75957de5a555424981606677234b8bdfe5c99a32bb6b01180bf748c2831a887bba1916c0332a2970d5e4dedd0b9c175de5a82d57763557615e6c98a6fb
+DIST idjc-0.8.9.tar.gz 2431086 SHA256 b74e9a8378b951492c35ea9c2e3e665c5dd79f94958168d4ca872592ab326e71 SHA512 8c24c7f974f0673483fb5e92ff4b0bdff168828fc4fbaa933b056fd505ea2503bdb1d8b94f934545e3f2a969d717ac68ae730cbb47fe8d6ce4c40f3db86a5ef7 WHIRLPOOL 9147d5010f6d75bdd05c2b9c2ceb0c31872b950ba0812c4bd43c41d7c1137c2918cc793e4f0c1d29666a8dc5ef33c9738586a0a611641ac8eb5d0d78b66069cc
 EBUILD idjc-0.8.8.ebuild 1315 SHA256 70eb170e956d01fdbeb92a354518699da92a142de551ccb4273eff341d4602fd SHA512 b9b93b65bfe07ee8c3cc9f77752347a3494f0a2a7e295613aec6fe77dfeb1c51b1bf5d103b03a2fd8f68819b12bae60b004578161ffc034e065ae9494c59293b WHIRLPOOL e9d026797eaef188b7d57f09614419f07b8e8595757d6da5f4ca760a2c7b10a421833a9e69d00d62ac4c29db0aacc145aba8d29247880cbc7e66a2695d704e6e
-EBUILD idjc-9999.ebuild 1419 SHA256 563fcf1bd683e7b5202565952e2b80ad8d44adeff4476174cd4a6982d2c5d16e SHA512 4fddf611df85836ce59c5b5365fce438f23087c8161a2d336904e77ac2709fc433d85cfd50d8764e0bfeae606824a24da8bfee7ef01430fa2bc8f39c4c6c1105 WHIRLPOOL 269228e8785684cc4a30a618efd46c34dd03ba5fc88a5d9fd8ba5c384380134a6b25c45310fd5f2d1c195079aa5c498b9509ad1a6808134746d902bc1853b067
-MISC ChangeLog 1325 SHA256 f74b1aca0d9e2e96e6dd21f462ba03dfa2bca53c273c67f7c144dd9d119c03bb SHA512 04b8b863bbd2889ab6199ecceab949a8fea75a27fbb041753ee1fe9b08381261b99cd2c1bc29a7fc4de9cb3a4a0170170dfb9ee783d76574d7ca359205bf018f WHIRLPOOL 55874b07642b6894b6b58af1100bd98d79ca9155fcff73477d6d1682cc2275828b5604aacf0e5aa2bef335e71475946e8a078fe869b8c54429e34f212d5fc647
-MISC metadata.xml 337 SHA256 c599beea0fa4ab147b2103dbc569de9d8fdeb1f46bcc680aef81c69b2d02eaab SHA512 71e047c2ce078dc23d06ddf4191822ca54372ba076bb759260c95b14ae0eef89a0b86307023517ebed05f345dacf6ace235ba4071ad2a375d35c1b9815e9143f WHIRLPOOL e6b257d94fb20e57bae5abd9ffa31213932326fb618a4e2ec6f21d52a0fd3742094d9f3be4acceded386919cc293acde36d2486f7f69780e4d8dc154cd1f738c
+EBUILD idjc-0.8.9.ebuild 1395 SHA256 a9d69bd72bf124507474fcb9aa853a51b57ab303f73a802cd8aee38d62dc13bc SHA512 a1e7fd43bd12444fec2989bcb258ec7b34d0ddd579083209de109a70d13bcae1687cf4fb838077820c3562441925eea4de8811f99d87ac324a8cdf76f18b80fb WHIRLPOOL 7e84decb7e3176e445195b25255f9938dd8c49f2ef672f08ca20f131c4cb47727172f33ce53fb98db7b9a663392141d14763b6f8330ade4fe696cc4dd9fea45c
+EBUILD idjc-9999.ebuild 1531 SHA256 920a974c7db8cbc9d4c60ce202dcb1306179d07340b7fc9d643c42f4332eb296 SHA512 22b6cc85bf758ca6f707089ce36b8808b57f398dc0f1cd18ceb1356b3da5d1535c152894a0e3b1623a24bc217939cbafc73d3f86598e1035ad6e7225fb9dc94c WHIRLPOOL bf2863953a8804d6f73f837902a732e216ddbd6ea0bd2a35afe23f6fbf5374d9d1f954b6443437131a6ea18a75dd14eaabd3fa7c19233f6a6bffdee0f04cf6c2
+MISC ChangeLog 1739 SHA256 3025bc0d1e2a17a8a884dbadf0c84da456788e45ab1ea08708e2f4f21872cde6 SHA512 5438c46de1f8a75ad608efa2a476c44f918d94c6875f45eded7eba6054479166675981e13e2e961e757d05bfbc08765db49fbdf2052ac35813ef3e3892c44659 WHIRLPOOL e24a13db40316a3b5642995173e3f547e79945dd437d34c7b0ffe5ae626f80af342e7ca158fd58f72aa8c77cb76267063d576cc98c4799acf1d34a0b7c7e59c6
+MISC metadata.xml 567 SHA256 e8e1bca17a2800bd24342eb9bf03618bbb9b0d720c702795780161a4e32e292a SHA512 dc07c4a70d19595a850b171b8269ad8423bbdd8cb3581073585887e35b525ad28a1271a0d6f1d6790cccb72bedf3be26ee547906e66c756173074a7d4c306d00 WHIRLPOOL 536e737508d4342d0443b6877a629f840e3fe900cebfb04ba594d3dad037c8fa37f023f7127c748533e118d550275940280f5dd9ab9815f2ada360e798751711
