@@ -4,17 +4,16 @@
 
 EAPI="5"
 
-AUTOTOOLS_AUTORECONF="1"
 PYTHON_COMPAT=( python2_7 )
-inherit autotools-utils git-2 python-single-r1
+inherit autotools-utils python-single-r1
 
 RESTRICT="mirror"
 DESCRIPTION="Internet DJ Console has two media players, jingles player, crossfader, VoIP and streaming"
 HOMEPAGE="http://idjc.sourceforge.net/"
-EGIT_REPO_URI="git://${PN}.git.sourceforge.net/gitroot/${PN}/${PN}"
+SRC_URI="mirror://sourceforge/${PN}/${P}.tar.gz"
 LICENSE="GPL-2"
 SLOT="0"
-KEYWORDS=""
+KEYWORDS="~x86 ~amd64"
 
 IUSE="doc ffmpeg flac mad mpg123 nls opus speex twolame"
 
@@ -37,14 +36,6 @@ RDEPEND=">=media-sound/jack-audio-connection-kit-0.100.7
 DEPEND="${RDEPEND}
 	virtual/pkgconfig"
 
-src_prepare() {
-	pushd "${S}/docsrc"
-	emake && emake doc
-	popd
-
-	autotools-utils_src_prepare
-}
-
 src_configure() {
 	local myeconfargs=(
 		$(use_enable ffmpeg libav)
@@ -61,6 +52,5 @@ src_configure() {
 
 src_install() {
 	use doc && HTML_DOCS=( doc/ )
-
 	autotools-utils_src_install
 }
