@@ -6,6 +6,9 @@
 		<name>pro-audio overlay team</name>
 	</maintainer>
 	<use>
+		<flag name="mpg123">Enable support for mp3 decoding through media-sound/mpg123</flag>
+		<flag name="opus">Enable Opus audio codec support</flag>
+		<flag name="twolame">Enables twolame support (MPEG Audio Layer 2 encoder)</flag>
 		<flag name="wma">Enable Windows Media Audio support through ffmpeg</flag>
 	</use>
 </pkgmetadata>
